--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2 {
+  padding: 0;
+  margin: 0;
+}
+
+p {
+    padding: 0;
+    margin: 0;
+}
+
+ul, ol {
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  padding: 0;
+  margin: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
